2021-07-15  Tim Nguyen  <ntim@apple.com>

        <dialog> element: do not perform close() method steps when removing open attribute.
        https://bugs.webkit.org/show_bug.cgi?id=227872

        Reviewed by Chris Dumez.

        Test: web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-open.html

        The close function now follows the steps at: https://html.spec.whatwg.org/multipage/interactive-elements.html#close-the-dialog

        * html/HTMLDialogElement.cpp:
        (WebCore::HTMLDialogElement::show):
        (WebCore::HTMLDialogElement::showModal):
        (WebCore::HTMLDialogElement::close):
        (WebCore::HTMLDialogElement::dispatchPendingEvent):
        (WebCore::HTMLDialogElement::isOpen const): Deleted.
        (WebCore::HTMLDialogElement::returnValue): Deleted.
        (WebCore::HTMLDialogElement::setReturnValue): Deleted.
        (WebCore::HTMLDialogElement::parseAttribute): Deleted.
        (WebCore::HTMLDialogElement::isModal const): Deleted.
        * html/HTMLDialogElement.h:

2021-07-15  Jer Noble  <jer.noble@apple.com>

        REGRESSION (r279119?): [iOS] ASSERTION FAILED: !m_impl || !m_shouldEnableAssertions || m_impl->wasConstructedOnMainThread() == isMainThread() seen with 3 WebKitLegacy media API tests
        https://bugs.webkit.org/show_bug.cgi?id=227930
        <rdar://problem/80545962>

        Reviewed by Eric Carlson.

        Dispatch to the WebThread if necessary.

        * platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
        (WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):

2021-07-15  Adrian Perez de Castro  <aperez@igalia.com>

        Non-unified build fixes, mid-July 2021 edition
        https://bugs.webkit.org/show_bug.cgi?id=227981

        Unreviewed non-unified build fixes.

        * accessibility/AXObjectCache.cpp: Add missing AXImage.h and RenderImage.h headers.
        * bindings/js/JSIntersectionObserverCustom.cpp: